# segmentation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  debug.c  debug.h  home.c  index.c  index.h  seg.c  seg.h  segmentation.c  str.c  str.h
